-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
Broken on at least Ubuntu 10.04 (32-bit) and 11.04 (64-bit), both with QPA.
Broken on Mac as well.
-
6385a182f0f93820c96cf274e50a56492491ee10
********* Start testing of tst_QGLThreads ********* Config: Using QTest library 5.0.0, Qt 5.0.0 PASS : tst_QGLThreads::initTestCase() Xlib: sequence lost (0x100cf > 0xd2) in reply type 0x15! QFATAL : tst_QGLThreads::swapInThread() Cannot make QOpenGLContext current in a different thread FAIL! : tst_QGLThreads::swapInThread() Received a fatal error. Loc: [Unknown file(0)] Totals: 1 passed, 1 failed, 0 skipped ********* Finished testing of tst_QGLThreads *********
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-