src/opengl/qglpaintdevice.cpp
@@ -43,6 +43,7 @@
 #include <private/qgl_p.h>
 #include <private/qglpixelbuffer_p.h>
 #include <private/qglframebufferobject_p.h>
+#include <qopenglfunctions.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -90,7 +91,7 @@ void QGLPaintDevice::beginPaint()
 
     if (m_previousFBO != m_thisFBO) {
         ctx->d_ptr->current_fbo = m_thisFBO;
-        glBindFramebuffer(GL_FRAMEBUFFER, m_thisFBO);
+        ctx->contextHandle()->functions()->glBindFramebuffer(GL_FRAMEBUFFER, m_thisFBO);
     }
 
     // Set the default fbo for the context to m_thisFBO so that
@@ -108,7 +109,7 @@ void QGLPaintDevice::ensureActiveTarget()
 
     if (ctx->d_ptr->current_fbo != m_thisFBO) {
         ctx->d_ptr->current_fbo = m_thisFBO;
-        glBindFramebuffer(GL_FRAMEBUFFER, m_thisFBO);
+        ctx->contextHandle()->functions()->glBindFramebuffer(GL_FRAMEBUFFER, m_thisFBO);
     }
 
     ctx->d_ptr->default_fbo = m_thisFBO;
@@ -120,7 +121,7 @@ void QGLPaintDevice::endPaint()
     QGLContext *ctx = context();
     if (m_previousFBO != ctx->d_func()->current_fbo) {
         ctx->d_ptr->current_fbo = m_previousFBO;
-        glBindFramebuffer(GL_FRAMEBUFFER, m_previousFBO);
+        ctx->contextHandle()->functions()->glBindFramebuffer(GL_FRAMEBUFFER, m_previousFBO);
     }
 
     ctx->d_ptr->default_fbo = 0;
